# AI-Translation-Pipeline

./: .gitignore  ADR_20260203_124045.md  Cleanup.md  DOCUMENTATION_INDEX.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PLAN.md  PLANNING_COMPLETE.md  PLAN_SUMMARY.md  PROGRESS.md  README.md  STYLE.md  STYLE_GUIDE.md  TESTING.md  UPDATE_SUMMARY.md  all_translations.json  config.py  evaluate_quality.py  lexical_constraints_options.md  main.py  main_pipeline.py  merge_all_weights.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  terminology.json  todo.md  translate.py  translate_document.py  translate_documents.py  translate_word_documents.py
.github/: CODEOWNERS
copilot_review/: instructions.md
create_training_data/: add_features.py  clean_data.py  create_training_data.py  data_cleaning.py  match_languages.py  pipeline.py  training_data_pipeline.py
data/: preferential_translations.json  table_translations.json  worddoc_exclusion_thresholds.json
data_cleaning/: __init__.py  correlation.py  feature_engineering.py  pipeline.py  text_processing.py
documentation/: Cleanup.md  DATA_STORAGE_GUIDE.md  DOCUMENTATION_INDEX.md  FINETUNING_CONSISTENCY.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PHASE_4_COMPLETE.md  PLAN.md  PROGRESS.md  REFACTORING_SUMMARY.md  TEST_SUMMARY.md  TRANSLATE_MODULE_SUMMARY.md
evaluation/: __init__.py  comparison.py  metrics.py
helpers/: check_token_replacements.py  examine_word_doc.py  swap_images.py
language_classifier/: language_classifier.py  wordlists.json
model_finetuning/: __init__.py  finetuning_pipeline.py  pipeline.py  (+3 more)
(+118 files in other folders)
